# claude-journal-mcp

./: .gitignore  .mcp.json  LICENSE  PLUGIN_CONVERSION_PLAN.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: test.yml
agents/: journal-assistant.md
commands/: journal-add.md  journal-export.md  journal-recent.md  journal-search.md  journal-stats.md  journal-time.md
hooks/: README.md  hooks.json  journal-auto-capture.js
skills/journal-capture/: SKILL.md
src/claude_journal/: __init__.py  cli.py  database.py  server.py  time_parser.py
tests/: test_database.py  test_time_parser.py
