[project]
name = "claude-journal-mcp"
version = "0.1.0"
description = "Lightweight journal/memory MCP server for Claude Code"
authors = [{name = "Chris Bryant"}]
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_journal"]
